--- a/frontend/templates/macros/render_browser.html
+++ b/frontend/templates/macros/render_browser.html
@@ -15,6 +15,7 @@
         <div class="graph-button"><a href="{{ url_for('main.graphs', id=graph.id) }}">{{ _("Show") }}</a></div>
       {% endif %}
       <div class="graph-button"><a data-toggle="collapse" href="#graph-{{graph.id}}-collapse">{{ _("Add") }}</a></div>
+      <div class="graph-button"><a href="{{ url_for('main.download_graph_png', id=graph.id) }}">{{ _("Download") }}</a></div>
       <div class="graph-button {{ '' if graph.public else 'disable' }}" id="graph-{{graph.id}}-public"><a onclick="toggleGraphPublic({{graph.id}})">{{ _("Public") }}</a></div>
       <div id="graph-{{graph.id}}-share" class="graph-button disable-link {{ '' if graph.public else 'd-none' }}"><a data-sharer="facebook" data-hashtag="Social-Insight" data-url="{{ url_for('main.graphs', id=graph.id, _external=True) }}">{{ _("Share") }}</a></div>
       <div id="graph-{{graph.id}}-copy" class="graph-button disable-link {{ '' if graph.public else 'd-none' }}"><a onclick="copyToClipboard({{graph.id}})">{{ _("Copy link") }}</a></div>
