--- a/frontend/templates/parts/_categories.html
+++ b/frontend/templates/parts/_categories.html
@@ -15,13 +15,14 @@
         <div class="text-center mt-2">
             <div class="dark-button"><a href="" data-toggle="modal" data-target="#rename-pack-modal">{{ _("rename") }}</a></div>
             <div class="dark-button"><a href="{{ url_for('main.remove_pack_confirm', id=pack.id) }}">{{ _("remove") }}</a></div>
-            <div class="dark-button"><a href="{{ url_for('main.pack2pdf', id=pack.id, style='fancy') }}" target="_blank">{{ _("generate pdf") }}</a></div>
-            <div class="dark-button"><a href="{{ url_for('main.pack2pdf', id=pack.id, style='print') }}" target="_blank">{{ _("pdf to print") }}</a></div>
+            <div class="dark-button"><a href="{{ url_for('main.pack2pdf', id=pack.id, style='fancy') }}" target="_blank">{{ _("download pdf") }}</a></div>
+            <div class="dark-button"><a href="{{ url_for('main.pack2pdf', id=pack.id, style='print') }}" target="_blank">{{ _("download pdf to print") }}</a></div>
+            <div class="dark-button"><a href="{{ url_for('main.download_pack_zip', id=pack.id) }}" target="_blank">{{ _("Download zip") }}</a></div>
         </div>
         {% endif %}
 
         <!-- Portfolio Grid Items-->
-        <div class="row justify-content-center mt-4">
+        <div class="row justify-content-center mt-3">
             <!-- Portfolio Item 1-->
             <div class="col-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto category {% if category=='messages' %}category-selected{% endif %}">
