--- a/frontend/templates/helper/table.html
+++ b/frontend/templates/helper/table.html
@@ -1,2 +1,1 @@
-{% import "macros/render_pdf.html" as pdf %}
-{{ pdf.render_pandas_table(table) }}
+{{ table.to_html(index=False, classes='data-table')|safe }}
