--- a/frontend/templates/macros/render_pdf.html
+++ b/frontend/templates/macros/render_pdf.html
@@ -11,7 +11,7 @@
         <td style="width: 50px;"></td>
       </tr>
     </table>
-    <img src="{{render_chart_png_inline(graph.data)|safe}}" width="800"/>
+    <img src="{{render_chart_png_inline(graph, title=False)|safe}}" width="800"/>
   </div>
 </div>
 {% endmacro -%}
