--- a/frontend/templates/macros/render_browser.html
+++ b/frontend/templates/macros/render_browser.html
@@ -16,7 +16,10 @@
     {% if graph.pack.user == user() %}
     <div class="graph-button"><a data-toggle="collapse" href="#graph-{{graph.id}}-collapse">{{ _("Add") }}</a></div>
     {% endif %}
-    <div class="graph-button"><a href="{{ url_for('main.download_graph_png', id=graph.id) }}">{{ _("Download") }}</a></div>
+    <div class="graph-button"><a href="{{ url_for('main.download_graph_png', id=graph.id) }}">{{ _("PNG") }}</a></div>
+    {% if is_pygal_chart(graph.data) %}
+    <div class="graph-button"><a href="{{ url_for('main.download_graph_svg', id=graph.id) }}">{{ _("SVG") }}</a></div>
+    {% endif %}
     {% if graph.pack.user == user() %}
     <div class="graph-button {{ '' if graph.public else 'disable' }}" id="graph-{{graph.id}}-public"><a onclick="toggleGraphPublic({{graph.id}})">{{ _("Public") }}</a></div>
     <div id="graph-{{graph.id}}-share" class="graph-button disable-link {{ '' if graph.public else 'd-none' }}"><a data-sharer="facebook" data-hashtag="Social-Insight" data-url="{{ url_for('main.graphs', id=graph.id, _external=True) }}">{{ _("Share") }}</a></div>
