--- a/frontend/templates/pdf.html
+++ b/frontend/templates/pdf.html
@@ -29,6 +29,7 @@
     {% for graph in container.graphs %}
         {% if graph.data is not none %}
             {{ pdf.render(graph, loop.index) }}
+            {{ update_progress(loop.index) }}
         {% endif %}
     {% endfor %}
 
