--- a/frontend/templates/macros/render_browser.html
+++ b/frontend/templates/macros/render_browser.html
@@ -4,7 +4,7 @@
 <div class="card mb-4 bg-graph" id="graph-{{graph.id}}" >
 
   <div class="text-center">
-    <h2 class="graph-header"><a class="js-scroll-trigger" href="#graph-{{graph.id}}">{{ graph.get_name() }}</a></h2>
+    <h2 class="graph-header"><a class="js-scroll-trigger" href="#graph-{{graph.id}}">{{ graph.name_trans }}</a></h2>
   </div>
 
   {% if graph.data is not none %}
