--- a/frontend/templates/macros/render_pdf.html
+++ b/frontend/templates/macros/render_pdf.html
@@ -7,7 +7,7 @@
     <table width="100%">
       <tr>
         <td style="width: 50px;"><h2>{{ordinal}}</h2></td>
-        <td style="text-align: center;"><h2 class="graph-header">{{ graph.get_name() }}</h2></td>
+        <td style="text-align: center;"><h2 class="graph-header">{{ graph.name_trans }}</h2></td>
         <td style="width: 50px;"></td>
       </tr>
     </table>
