Dodano tłumaczenia maili

--- a/frontend/templates/mails/basic.html
+++ b/frontend/templates/mails/basic.html
@@ -88,7 +88,7 @@
                             <tr>
                                 <td align='center' style='font-size:0px;padding:10px 25px;word-break:break-word;'>
                                     <table border='0' cellpadding='0' cellspacing='0'
-                                           style='cellpadding:0;cellspacing:0;color:#000000;font-family:Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;table-layout:auto;width:40%;'
+                                           style='cellpadding:0;cellspacing:0;color:#000000;font-family:Helvetica, Arial, sans-serif;font-size:13px;table-layout:auto;width:40%;'
                                            width='40%'>
                                         <tbody>
                                         <td align='center'>
@@ -170,7 +170,7 @@
                                                 <td align='center'
                                                     style='font-size:0px;padding:10px 25px;word-break:break-word;'>
                                                     <div style="color:white;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:12px;line-height:1;text-align:center;">
-                                                        Social Insight, like on on <a href='https://facebook.com' style="color: white; text-decoration: none;">Facebook</a>
+                                                        {{ _('Social Insight, like us on Facebook') }}
                                                     </div>
                                                 </td>
                                             </tr>
