--- a/frontend/templates/mails/reply.html
+++ b/frontend/templates/mails/reply.html
@@ -4,10 +4,10 @@
 <tr>
 <td align='left'
     style='font-size:0px;padding:10px 25px;word-break:break-word;'>
-    <div style="color:black;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;">
-        <h1 style="text-align: center;">Reply</h1>
-        <p><b>Your message:</b> {{message.content}}</p>
-        <p><b>Response:</b> {{response}}</p>
+    <div style="color:black;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:16px;text-align:left;">
+        <h1 style="text-align: center;">{{ _('Response') }}</h1>
+        <p><b>{{ _('Your message') }}:</b> {{message.content}}</p>
+        <p><b>{{ _('Response') }}:</b> {{response}}</p>
     </div>
 </td>
 </tr>
