--- a/frontend/templates/mails/reset_password.html
+++ b/frontend/templates/mails/reset_password.html
@@ -5,7 +5,7 @@
 <td align='center'
     style='font-size:0px;padding:10px 25px;word-break:break-word;'>
     <div style="color:white;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:16px;line-height:20px;text-align:center;">
-        Reset you password with the button bellow.
+        {{ _('Reset your password with the button bellow.') }}
     </div>
 </td>
 </tr>
@@ -23,7 +23,7 @@
                 <a href="{{ url_for('auth.reset_password', token=token, _external=True) }}"
                    style="background:#178F8F;color:#ffffff;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:16px;font-weight:bold;line-height:30px;margin:0;text-decoration:none;text-transform:none;"
                    target='_blank'>
-                    Reset!
+                    {{ _('Reset!') }}
                 </a>
             </td>
         </tr>
