--- a/frontend/templates/password_change.html
+++ b/frontend/templates/password_change.html
@@ -23,7 +23,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase">{{ _("Change password") }}</h2>
+            <h2 class="page-section-heading header-standard mb-0 d-inline-block text-uppercase">{{ _("Change password") }}</h2>
         </div>
 
         <!-- Icon Divider-->
