--- a/frontend/templates/parts/_language_modal.html
+++ b/frontend/templates/parts/_language_modal.html
@@ -16,11 +16,11 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-6 language-tile">
-                            <a href="{{ url_for('main.change_language', lang='en') }}"><img class="mb-5" src="{{ m.theme_image('english.png') }}" alt="English"/></a>
+                            <a href="{{ url_for('main.change_language', lang='en', next=request.url) }}"><img class="mb-5" src="{{ m.theme_image('english.png') }}" alt="English"/></a>
                             <p class="text-background font-weight-bold">English</p>
                         </div>
                         <div class="col-12 col-md-6 language-tile">
-                            <a href="{{ url_for('main.change_language', lang='pl') }}"><img class="mb-5" src="{{ m.theme_image('polish.png') }}" alt="Polish"/></a>
+                            <a href="{{ url_for('main.change_language', lang='pl', next=request.url) }}"><img class="mb-5" src="{{ m.theme_image('polish.png') }}" alt="Polish"/></a>
                             <p class="text-background font-weight-bold">Polski</p>
                         </div>
                         <div class="col-12">
