--- a/frontend/templates/parts/_categories.html
+++ b/frontend/templates/parts/_categories.html
@@ -1,3 +1,14 @@
+{% macro category_tile(name, trans_name) -%}
+<div class="col-6 col-lg-3 mb-4">
+    <div class="portfolio-item mx-auto category {% if category==name %}category-selected{% endif %}">
+        <a class="no-underline" href="{{ url_for('main.graphs_category', id=pack.id, category=name) }}">
+            <img class="img-fluid" src="{{ m.static('images/category_' + name + '.png') }}" alt="" />
+            <div class="bg-secondary text-light text-center">{{ trans_name }}</div>
+        </a>
+    </div>
+</div>
+{% endmacro -%}
+
 <section class="page-section portfolio first-section bg-primary pb-0 round-bottom">
     <div class="container">
 
@@ -25,41 +36,10 @@
         <!-- Portfolio Grid Items-->
         <div class="row justify-content-center mt-3">
             <!-- Portfolio Item 1-->
-            <div class="col-6 col-lg-3 mb-4">
-                <div class="portfolio-item mx-auto category {% if category=='messages' %}category-selected{% endif %}">
-                    <a class="no-underline" href="{{ url_for('main.graphs_category', id=pack.id, category='messages') }}">
-                        <img class="img-fluid" src="{{ m.static('images/category_messages.png') }}" alt="" />
-                        <div class="bg-secondary text-light text-center">{{ _("messages") }}</div>
-                    </a>
-                </div>
-            </div>
-            <!-- Portfolio Item 2-->
-            <div class="col-6 col-lg-3 mb-4">
-                <div class="portfolio-item mx-auto category {% if category=='posts' %}category-selected{% endif %}">
-                    <a class="no-underline" href="{{ url_for('main.graphs_category', id=pack.id, category='posts') }}">
-                        <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
-                        <div class="bg-secondary text-light text-center">{{ _("posts") }}</div>
-                    </a>
-                </div>
-            </div>
-            <!-- Portfolio Item 3-->
-            <div class="col-6 col-lg-3 mb-4 mb-lg-0">
-                <div class="portfolio-item mx-auto category {% if category=='administration' %}category-selected{% endif %}">
-                    <a class="no-underline" href="{{ url_for('main.graphs_category', id=pack.id, category='administration') }}">
-                        <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
-                        <div class="bg-secondary text-light text-center">{{ _("administration") }}</div>
-                    </a>
-                </div>
-            </div>
-            <!-- Portfolio Item 4-->
-            <div class="col-6 col-lg-3 mb-4">
-                <div class="portfolio-item mx-auto category {% if category=='other' %}category-selected{% endif %}">
-                    <a class="no-underline" href="{{ url_for('main.graphs_category', id=pack.id, category='other') }}">
-                        <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
-                        <div class="bg-secondary text-light text-center">{{ _("other") }}</div>
-                    </a>
-                </div>
-            </div>
+            {{ category_tile('messages', _('messages')) }}
+            {{ category_tile('posts', _('posts')) }}
+            {{ category_tile('administration', _('administration')) }}
+            {{ category_tile('other', _('other')) }}
         </div>
 
         {% if not current_user.is_authenticated and not pack.example %}
