--- a/frontend/static/css/light.css
+++ b/frontend/static/css/light.css
@@ -25,5 +25,6 @@
     --bg-graph: white;
     --text-graph: black;
 
-    --border-category: 2px #1abc9c white;
+    --border-category: transparent;
+    --border-category-selected: black;
 }
