--- a/frontend/templates/graph.html
+++ b/frontend/templates/graph.html
@@ -12,7 +12,7 @@
 <section class="page-section first-section">
     <div class="container">
         <div class="col-12">
-            {{ browser.render(graph, showButton=False) }}
+            {{ browser.render(graph, showButton=False, extended=True) }}
         </div>
     </div>
 </section>
