--- a/frontend/templates/macros/render_browser.html
+++ b/frontend/templates/macros/render_browser.html
@@ -1,14 +1,15 @@
 {% import "macros/general.html" as m %}
 
-{% macro render(graph, showButton=True) -%}
+{% macro render(graph, showButton=True, extended=False) -%}
 <div class="card mb-4 bg-graph" id="graph-{{graph.id}}" >
 
   <div class="text-center">
     <h2 class="graph-header"><a class="js-scroll-trigger" href="#graph-{{graph.id}}">{{ graph.name_trans }}</a></h2>
   </div>
 
-  {% if graph.data is not none %}
-  {{ render_sth(graph.data) }}
+  {% set data = graph.get_data(extended) %}
+  {% if data is not none %}
+  {{ render_sth(data) }}
   <div class="card-body mt-0 pt-0">
     {% if showButton %}
       <div class="graph-button"><a href="{{ url_for('main.graphs', id=graph.id) }}">{{ _("Show") }}</a></div>
@@ -17,7 +18,7 @@
     <div class="graph-button"><a data-toggle="collapse" href="#graph-{{graph.id}}-collapse">{{ _("Add") }}</a></div>
     {% endif %}
     <div class="graph-button"><a href="{{ url_for('main.download_graph_png', id=graph.id) }}">{{ _("PNG") }}</a></div>
-    {% if is_pygal_chart(graph.data) %}
+    {% if is_pygal_chart(data) %}
     <div class="graph-button"><a href="{{ url_for('main.download_graph_svg', id=graph.id) }}">{{ _("SVG") }}</a></div>
     {% endif %}
     {% if graph.pack.user == user() %}
